PROJECT(qscintilla-sharp)

IF (NOT QSCINTILLA_FOUND)
	FIND_PACKAGE(QScintilla REQUIRED)
ENDIF (NOT QSCINTILLA_FOUND)

IF (NOT QT4_FOUND)
	FIND_PACKAGE(Qt4 REQUIRED)
ENDIF (NOT QT4_FOUND)

SET(SRC_CPP src/qscintilla.cpp)

SET(SRC_CS src/QScintilla.cs
	src/AssemblyInfo.cs
	qsci/*.cs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/generator 
	${CMAKE_CURRENT_SOURCE_DIR}/../qyoto/src ${QT_INCLUDES})
LINK_DIRECTORIES (${LIBRARY_OUTPUT_PATH})
ADD_LIBRARY(qscintilla-sharp SHARED ${SRC_CPP})
TARGET_LINK_LIBRARIES(qscintilla-sharp ${SMOKE_QSCI_LIBRARY} qyoto ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QSCINTILLA_LIBRARY})

CSHARP_ADD_LIBRARY(qscintilla "${SRC_CS}" REFERENCES qt-dotnet COMPILE_FLAGS /warn:0 /keyfile:${KEYFILE})
ADD_DEPENDENCIES(qscintilla qt-dotnet qscintilla-sharp ${SMOKE_QSCI_LIBRARY})

install(TARGETS qscintilla-sharp
    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
    ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
    RUNTIME DESTINATION bin)
if (WIN32)
    # Get rid of the "lib" prefix on archives/DLLs in Windows.
    set_target_properties(qscintilla-sharp PROPERTIES PREFIX "" IMPORT_PREFIX "")
endif (WIN32)
INSTALL_ASSEMBLY(qscintilla DESTINATION ${LIB_INSTALL_DIR} PACKAGE qyoto)
