PROJECT(khtml-sharp)

IF (NOT KDE4_FOUND)
	FIND_PACKAGE(KDE4 REQUIRED)
ENDIF (NOT KDE4_FOUND)

IF (NOT QT4_FOUND)
	FIND_PACKAGE(Qt4 REQUIRED)
ENDIF (NOT QT4_FOUND)

SET(SRC_CPP src/khtml.cpp src/khtmlhandlers.cpp)

SET(SRC_CS src/AssemblyInfo.cs 
 src/KHTML.cs 
khtml/*.cs)

LINK_DIRECTORIES (${LIBRARY_OUTPUT_PATH})
ADD_LIBRARY(khtml-sharp SHARED ${SRC_CPP})
ADD_DEPENDENCIES(khtml-sharp ${SMOKE_KHTML_LIBRARY})
TARGET_LINK_LIBRARIES(khtml-sharp
    ${SMOKE_KHTML_LIBRARY}
    ${SMOKE_BASE_LIBRARY}
    ${QYOTO_LIBRARY}
    ${KHTML_LIBS})

CSHARP_ADD_LIBRARY(khtml-dll ${SRC_CS} REFERENCES ${QYOTO_ASSEMBLY} kde-dotnet COMPILE_FLAGS /warn:0 /keyfile:${QYOTO_KEYFILE})
ADD_DEPENDENCIES(khtml-dll khtml-sharp kde-dotnet)

INSTALL(TARGETS khtml-sharp LIBRARY DESTINATION ${LIB_INSTALL_DIR})
INSTALL_ASSEMBLY(khtml-dll DESTINATION ${LIB_INSTALL_DIR} PACKAGE qyoto)
