PROJECT(nepomuk-sharp)

IF (NOT NEPOMUK_FOUND)
	FIND_PACKAGE(Nepomuk REQUIRED)
ENDIF (NOT NEPOMUK_FOUND)

IF (NOT QT4_FOUND)
	FIND_PACKAGE(Qt4 REQUIRED)
ENDIF (NOT QT4_FOUND)

SET(SRC_CPP src/nepomuk.cpp src/nepomukhandlers.cpp)

SET(SRC_CS src/Nepomuk.cs
	src/AssemblyInfo.cs
	nepomuk/*.cs)

LINK_DIRECTORIES (${LIBRARY_OUTPUT_PATH})
ADD_LIBRARY(nepomuk-sharp SHARED ${SRC_CPP})
TARGET_LINK_LIBRARIES(nepomuk-sharp ${NEPOMUK_LIBRARIES}
    ${SMOKE_NEPOMUK_LIBRARY}
    ${SMOKE_BASE_LIBRARY}
    ${QYOTO_LIBRARY}
    ${QT_QTCORE_LIBRARY}
    ${QT_QTGUI_LIBRARY}
    ${NEPOMUK_LIBRARIES}
    ${NEPOMUK_QUERY_LIBRARIES})

CSHARP_ADD_LIBRARY(nepomuk-dll "${SRC_CS}" REFERENCES ${QYOTO_ASSEMBLY} soprano COMPILE_FLAGS /warn:0 /keyfile:${QYOTO_KEYFILE})
ADD_DEPENDENCIES(nepomuk-dll soprano nepomuk-sharp smokenepomuk)

INSTALL(TARGETS nepomuk-sharp LIBRARY DESTINATION ${LIB_INSTALL_DIR})
INSTALL_ASSEMBLY(nepomuk-dll DESTINATION ${LIB_INSTALL_DIR} PACKAGE qyoto)
