ADD_SUBDIRECTORY(t1)
ADD_SUBDIRECTORY(t2)
ADD_SUBDIRECTORY(t3)
ADD_SUBDIRECTORY(t4)
ADD_SUBDIRECTORY(t5)
ADD_SUBDIRECTORY(t6)
ADD_SUBDIRECTORY(t7)
ADD_SUBDIRECTORY(t8)
ADD_SUBDIRECTORY(t9)
ADD_SUBDIRECTORY(t10)
ADD_SUBDIRECTORY(t11)
ADD_SUBDIRECTORY(t12)
ADD_SUBDIRECTORY(t13)
ADD_SUBDIRECTORY(t14)

